before auto zoom attempt

--- a/src/instructions.html
+++ b/src/instructions.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-13 Mon 15:57 -->
+<!-- 2022-06-13 Mon 16:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Documentation</title>
@@ -235,26 +235,27 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org5e25027">1. Data mapping</a>
+<li><a href="#orgdd2d120">1. Data mapping</a>
 <ul>
-<li><a href="#orged3b235">1.1. PM10</a></li>
-<li><a href="#org7a27f78">1.2. PM25</a></li>
-<li><a href="#orgd467e6c">1.3. Noise Levels</a></li>
-<li><a href="#orgb14b61a">1.4. Truck count</a></li>
-<li><a href="#orgf7e7a88">1.5. Humidity</a></li>
-<li><a href="#org10022eb">1.6. Temperature</a></li>
+<li><a href="#orgbd18088">1.1. PM10</a></li>
+<li><a href="#orgc3cfd30">1.2. PM25</a></li>
+<li><a href="#org887e9bf">1.3. Noise Levels</a></li>
+<li><a href="#org422f8d8">1.4. Truck count</a></li>
+<li><a href="#orgdef4fb7">1.5. Humidity</a></li>
+<li><a href="#org54ca095">1.6. Temperature</a></li>
 </ul>
 </li>
+<li><a href="#orgf825b1c">2. Re-sampling data-set</a></li>
 </ul>
 </div>
 </div>
 
 
-<div id="outline-container-org5e25027" class="outline-2">
-<h2 id="org5e25027"><span class="section-number-2">1</span> Data mapping</h2>
+<div id="outline-container-orgdd2d120" class="outline-2">
+<h2 id="orgdd2d120"><span class="section-number-2">1</span> Data mapping</h2>
 <div class="outline-text-2" id="text-1">
-</div><div id="outline-container-orged3b235" class="outline-3">
-<h3 id="orged3b235"><span class="section-number-3">1.1</span> PM10</h3>
+</div><div id="outline-container-orgbd18088" class="outline-3">
+<h3 id="orgbd18088"><span class="section-number-3">1.1</span> PM10</h3>
 <div class="outline-text-3" id="text-1-1">
 <pre class="example">
 Mapping: Pitch, pan.
@@ -267,8 +268,8 @@ Mapping: Pitch, pan.
 </div>
 </div>
 
-<div id="outline-container-org7a27f78" class="outline-3">
-<h3 id="org7a27f78"><span class="section-number-3">1.2</span> PM25</h3>
+<div id="outline-container-orgc3cfd30" class="outline-3">
+<h3 id="orgc3cfd30"><span class="section-number-3">1.2</span> PM25</h3>
 <div class="outline-text-3" id="text-1-2">
 <pre class="example">
 Mapping: Pitch, pan.
@@ -279,32 +280,32 @@ Mapping: Pitch, pan.
 </pre>
 </div>
 </div>
-<div id="outline-container-orgd467e6c" class="outline-3">
-<h3 id="orgd467e6c"><span class="section-number-3">1.3</span> Noise Levels</h3>
+<div id="outline-container-org887e9bf" class="outline-3">
+<h3 id="org887e9bf"><span class="section-number-3">1.3</span> Noise Levels</h3>
 <div class="outline-text-3" id="text-1-3">
 <pre class="example">
 ...
 </pre>
 </div>
 </div>
-<div id="outline-container-orgb14b61a" class="outline-3">
-<h3 id="orgb14b61a"><span class="section-number-3">1.4</span> Truck count</h3>
+<div id="outline-container-org422f8d8" class="outline-3">
+<h3 id="org422f8d8"><span class="section-number-3">1.4</span> Truck count</h3>
 <div class="outline-text-3" id="text-1-4">
 <pre class="example">
 ...
 </pre>
 </div>
 </div>
-<div id="outline-container-orgf7e7a88" class="outline-3">
-<h3 id="orgf7e7a88"><span class="section-number-3">1.5</span> Humidity</h3>
+<div id="outline-container-orgdef4fb7" class="outline-3">
+<h3 id="orgdef4fb7"><span class="section-number-3">1.5</span> Humidity</h3>
 <div class="outline-text-3" id="text-1-5">
 <pre class="example">
 ...
 </pre>
 </div>
 </div>
-<div id="outline-container-org10022eb" class="outline-3">
-<h3 id="org10022eb"><span class="section-number-3">1.6</span> Temperature</h3>
+<div id="outline-container-org54ca095" class="outline-3">
+<h3 id="org54ca095"><span class="section-number-3">1.6</span> Temperature</h3>
 <div class="outline-text-3" id="text-1-6">
 <pre class="example">
 ...
@@ -313,10 +314,19 @@ Not yet implemented
 </div>
 </div>
 </div>
+
+<div id="outline-container-orgf825b1c" class="outline-2">
+<h2 id="orgf825b1c"><span class="section-number-2">2</span> Re-sampling data-set</h2>
+<div class="outline-text-2" id="text-2">
+<p>
+&#x2026;
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jason SK</p>
-<p class="date">Created: 2022-06-13 Mon 15:57</p>
+<p class="date">Created: 2022-06-13 Mon 16:10</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
