--- a/src/HTML_documentation/instructions.html
+++ b/src/HTML_documentation/instructions.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-14 Tue 14:22 -->
+<!-- 2022-06-14 Tue 14:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class="underline">Documentation</span></title>
@@ -236,29 +236,27 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgecac385">1. Data mapping</a>
+<li><a href="#orgd261f35">1. Data mapping</a>
 <ul>
-<li><a href="#orgf9c07cf">1.1. PM10</a></li>
-<li><a href="#orgdb79087">1.2. PM25</a></li>
-<li><a href="#orgd18eaa7">1.3. Noise Levels</a></li>
-<li><a href="#orga3ff9c4">1.4. Truck count</a></li>
-<li><a href="#org4ac0c81">1.5. Humidity</a></li>
-<li><a href="#org836ec34">1.6. Temperature</a></li>
+<li><a href="#org02b5113">1.1. PM10</a></li>
+<li><a href="#org94de99c">1.2. PM25</a></li>
+<li><a href="#org8520f59">1.3. Noise Levels</a></li>
+<li><a href="#orge96ff8c">1.4. Truck count</a></li>
+<li><a href="#org161c67d">1.5. Humidity</a></li>
+<li><a href="#org5f20da3">1.6. Temperature</a></li>
 </ul>
 </li>
-<li><a href="#org2d5024b">2. Re-sampling data-set</a></li>
+<li><a href="#org756b10f">2. Re-sampling data-set</a></li>
 </ul>
 </div>
 </div>
 
 
-
-
-<div id="outline-container-orgecac385" class="outline-2">
-<h2 id="orgecac385"><span class="section-number-2">1</span> Data mapping</h2>
+<div id="outline-container-orgd261f35" class="outline-2">
+<h2 id="orgd261f35"><span class="section-number-2">1</span> Data mapping</h2>
 <div class="outline-text-2" id="text-1">
-</div><div id="outline-container-orgf9c07cf" class="outline-3">
-<h3 id="orgf9c07cf"><span class="section-number-3">1.1</span> PM10</h3>
+</div><div id="outline-container-org02b5113" class="outline-3">
+<h3 id="org02b5113"><span class="section-number-3">1.1</span> PM10</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 <span class="underline">Mapping: Pitch, pan, releaseTime, amplitude, amplitude level of noisy stochastic generator in the sound (Gendy2.ar).</span>
@@ -286,8 +284,8 @@ Mapping ranges:
 </div>
 </div>
 
-<div id="outline-container-orgdb79087" class="outline-3">
-<h3 id="orgdb79087"><span class="section-number-3">1.2</span> PM25</h3>
+<div id="outline-container-org94de99c" class="outline-3">
+<h3 id="org94de99c"><span class="section-number-3">1.2</span> PM25</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 <span class="underline">Mapping: Pitch, pan, releaseTime, amplitude, amplitude level of noisy stochastic generator in the sound (Gendy5.ar).</span>
@@ -314,8 +312,8 @@ Mapping ranges:
 </div>
 </div>
 
-<div id="outline-container-orgd18eaa7" class="outline-3">
-<h3 id="orgd18eaa7"><span class="section-number-3">1.3</span> Noise Levels</h3>
+<div id="outline-container-org8520f59" class="outline-3">
+<h3 id="org8520f59"><span class="section-number-3">1.3</span> Noise Levels</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 <span class="underline">Mapping: main oscillator frequency, modulation frequency ("beat"), modulation depth, LPF cut-off, modulation ocillator's mix</span>
@@ -353,8 +351,8 @@ Mapping ranges:
 </div>
 </div>
 
-<div id="outline-container-orga3ff9c4" class="outline-3">
-<h3 id="orga3ff9c4"><span class="section-number-3">1.4</span> Truck count</h3>
+<div id="outline-container-orge96ff8c" class="outline-3">
+<h3 id="orge96ff8c"><span class="section-number-3">1.4</span> Truck count</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 <span class="underline">Mapping: Frequency, de-tuning factor, amplitude</span>
@@ -377,8 +375,8 @@ De-tuning: 1 - 1.11 frequency multiplier
 </pre>
 </div>
 </div>
-<div id="outline-container-org4ac0c81" class="outline-3">
-<h3 id="org4ac0c81"><span class="section-number-3">1.5</span> Humidity</h3>
+<div id="outline-container-org161c67d" class="outline-3">
+<h3 id="org161c67d"><span class="section-number-3">1.5</span> Humidity</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 <span class="underline">Mapping: Wet (reverb), t60 (reverb)</span>
@@ -406,8 +404,8 @@ t60: 0.5 - 1.5
 </div>
 </div>
 
-<div id="outline-container-org836ec34" class="outline-3">
-<h3 id="org836ec34"><span class="section-number-3">1.6</span> Temperature</h3>
+<div id="outline-container-org5f20da3" class="outline-3">
+<h3 id="org5f20da3"><span class="section-number-3">1.6</span> Temperature</h3>
 <div class="outline-text-3" id="text-1-6">
 <p>
 Not yet implemented
@@ -420,11 +418,11 @@ Not yet implemented
 </div>
 </div>
 
-<div id="outline-container-org2d5024b" class="outline-2">
-<h2 id="org2d5024b"><span class="section-number-2">2</span> Re-sampling data-set</h2>
+<div id="outline-container-org756b10f" class="outline-2">
+<h2 id="org756b10f"><span class="section-number-2">2</span> Re-sampling data-set</h2>
 <div class="outline-text-2" id="text-2">
 <p>
-The above check-boxes on the interface can be selected so that the initial data-set with a period of 30 sec / observation can be re-sampled.
+The above check-boxes can be selected on the interface so that the initial data-set with a period of 30 sec / observation can be re-sampled.
 </p>
 
 
@@ -453,7 +451,7 @@ In the re-sampling function the following periods can be applied to the initial 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jason SK</p>
-<p class="date">Created: 2022-06-14 Tue 14:22</p>
+<p class="date">Created: 2022-06-14 Tue 14:45</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
