--- a/src/HTML_documentation/instructions.html
+++ b/src/HTML_documentation/instructions.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-14 Tue 14:45 -->
+<!-- 2022-06-22 Wed 13:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class="underline">Documentation</span></title>
@@ -236,28 +236,36 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd261f35">1. Data mapping</a>
+<li><a href="#orgfc27a71">1. Plots</a></li>
+<li><a href="#orge834407">2. Data mapping</a>
 <ul>
-<li><a href="#org02b5113">1.1. PM10</a></li>
-<li><a href="#org94de99c">1.2. PM25</a></li>
-<li><a href="#org8520f59">1.3. Noise Levels</a></li>
-<li><a href="#orge96ff8c">1.4. Truck count</a></li>
-<li><a href="#org161c67d">1.5. Humidity</a></li>
-<li><a href="#org5f20da3">1.6. Temperature</a></li>
+<li><a href="#org7cbd8bc">2.1. PM10</a></li>
+<li><a href="#orge8eeee5">2.2. PM25</a></li>
+<li><a href="#orgb87ca04">2.3. Noise Levels</a></li>
+<li><a href="#orgf020986">2.4. Truck count</a></li>
+<li><a href="#orgb8f61da">2.5. Humidity</a></li>
+<li><a href="#orga4d44b8">2.6. Temperature</a></li>
 </ul>
 </li>
-<li><a href="#org756b10f">2. Re-sampling data-set</a></li>
+<li><a href="#org3bad461">3. Re-sampling data-set</a></li>
 </ul>
 </div>
 </div>
 
-
-<div id="outline-container-orgd261f35" class="outline-2">
-<h2 id="orgd261f35"><span class="section-number-2">1</span> Data mapping</h2>
+<div id="outline-container-orgfc27a71" class="outline-2">
+<h2 id="orgfc27a71"><span class="section-number-2">1</span> Plots</h2>
 <div class="outline-text-2" id="text-1">
-</div><div id="outline-container-org02b5113" class="outline-3">
-<h3 id="org02b5113"><span class="section-number-3">1.1</span> PM10</h3>
-<div class="outline-text-3" id="text-1-1">
+<p>
+The line plots show a re-sampled version of the extensive data-set for the sake of speed and efficiency.  The data-set is too cumbersome/bulky for efficient line plot rendering in the browser.  The non-resampled one has approx 90.000 points in comparison to the re-sampled one that has only 9.000 approx.  The re-sampling frequency is 5min and renders the greatest value observed during this 5min period.
+</p>
+</div>
+</div>
+<div id="outline-container-orge834407" class="outline-2">
+<h2 id="orge834407"><span class="section-number-2">2</span> Data mapping</h2>
+<div class="outline-text-2" id="text-2">
+</div><div id="outline-container-org7cbd8bc" class="outline-3">
+<h3 id="org7cbd8bc"><span class="section-number-3">2.1</span> PM10</h3>
+<div class="outline-text-3" id="text-2-1">
 <p>
 <span class="underline">Mapping: Pitch, pan, releaseTime, amplitude, amplitude level of noisy stochastic generator in the sound (Gendy2.ar).</span>
 </p>
@@ -284,9 +292,9 @@ Mapping ranges:
 </div>
 </div>
 
-<div id="outline-container-org94de99c" class="outline-3">
-<h3 id="org94de99c"><span class="section-number-3">1.2</span> PM25</h3>
-<div class="outline-text-3" id="text-1-2">
+<div id="outline-container-orge8eeee5" class="outline-3">
+<h3 id="orge8eeee5"><span class="section-number-3">2.2</span> PM25</h3>
+<div class="outline-text-3" id="text-2-2">
 <p>
 <span class="underline">Mapping: Pitch, pan, releaseTime, amplitude, amplitude level of noisy stochastic generator in the sound (Gendy5.ar).</span>
 </p>
@@ -312,9 +320,9 @@ Mapping ranges:
 </div>
 </div>
 
-<div id="outline-container-org8520f59" class="outline-3">
-<h3 id="org8520f59"><span class="section-number-3">1.3</span> Noise Levels</h3>
-<div class="outline-text-3" id="text-1-3">
+<div id="outline-container-orgb87ca04" class="outline-3">
+<h3 id="orgb87ca04"><span class="section-number-3">2.3</span> Noise Levels</h3>
+<div class="outline-text-3" id="text-2-3">
 <p>
 <span class="underline">Mapping: main oscillator frequency, modulation frequency ("beat"), modulation depth, LPF cut-off, modulation ocillator's mix</span>
 </p>
@@ -351,9 +359,9 @@ Mapping ranges:
 </div>
 </div>
 
-<div id="outline-container-orge96ff8c" class="outline-3">
-<h3 id="orge96ff8c"><span class="section-number-3">1.4</span> Truck count</h3>
-<div class="outline-text-3" id="text-1-4">
+<div id="outline-container-orgf020986" class="outline-3">
+<h3 id="orgf020986"><span class="section-number-3">2.4</span> Truck count</h3>
+<div class="outline-text-3" id="text-2-4">
 <p>
 <span class="underline">Mapping: Frequency, de-tuning factor, amplitude</span>
 </p>
@@ -375,9 +383,9 @@ De-tuning: 1 - 1.11 frequency multiplier
 </pre>
 </div>
 </div>
-<div id="outline-container-org161c67d" class="outline-3">
-<h3 id="org161c67d"><span class="section-number-3">1.5</span> Humidity</h3>
-<div class="outline-text-3" id="text-1-5">
+<div id="outline-container-orgb8f61da" class="outline-3">
+<h3 id="orgb8f61da"><span class="section-number-3">2.5</span> Humidity</h3>
+<div class="outline-text-3" id="text-2-5">
 <p>
 <span class="underline">Mapping: Wet (reverb), t60 (reverb)</span>
 </p>
@@ -404,9 +412,9 @@ t60: 0.5 - 1.5
 </div>
 </div>
 
-<div id="outline-container-org5f20da3" class="outline-3">
-<h3 id="org5f20da3"><span class="section-number-3">1.6</span> Temperature</h3>
-<div class="outline-text-3" id="text-1-6">
+<div id="outline-container-orga4d44b8" class="outline-3">
+<h3 id="orga4d44b8"><span class="section-number-3">2.6</span> Temperature</h3>
+<div class="outline-text-3" id="text-2-6">
 <p>
 Not yet implemented
 </p>
@@ -418,9 +426,9 @@ Not yet implemented
 </div>
 </div>
 
-<div id="outline-container-org756b10f" class="outline-2">
-<h2 id="org756b10f"><span class="section-number-2">2</span> Re-sampling data-set</h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-org3bad461" class="outline-2">
+<h2 id="org3bad461"><span class="section-number-2">3</span> Re-sampling data-set</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 The above check-boxes can be selected on the interface so that the initial data-set with a period of 30 sec / observation can be re-sampled.
 </p>
@@ -451,7 +459,7 @@ In the re-sampling function the following periods can be applied to the initial 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jason SK</p>
-<p class="date">Created: 2022-06-14 Tue 14:45</p>
+<p class="date">Created: 2022-06-22 Wed 13:19</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
